# marmot-cli

./: CHANGELOG.md  Cargo.toml  README.md  TROUBLESHOOTING.md  marmot
examples/: README.md  basic-bot.sh  message-logger.mjs  openclaw-webhook.mjs
src/: main.rs
src/nip46/: audit.rs  config.rs  mod.rs  signer.rs
