[package]
name = "marmot-cli"
version = "0.1.0"
edition = "2021"
description = "CLI tool for Marmot/Whitenoise E2E encrypted messaging over Nostr"

[dependencies]
# Use same MDK version as Whitenoise for compatibility
mdk-core = { git = "https://github.com/parres-hq/mdk", rev = "5ef0c607e56cc20217ddde24b4b2f8e82f76b776" }
mdk-sqlite-storage = { git = "https://github.com/parres-hq/mdk", rev = "5ef0c607e56cc20217ddde24b4b2f8e82f76b776" }
mdk-storage-traits = { git = "https://github.com/parres-hq/mdk", rev = "5ef0c607e56cc20217ddde24b4b2f8e82f76b776" }
# Match nostr versions with MDK (0.44)
nostr = { version = "0.44", features = ["std", "nip44", "nip59"] }
nostr-sdk = { version = "0.44", features = ["nip59"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
hex = "0.4"
